템플릿 수정

--- a/guide/elements/button.html
+++ b/guide/elements/button.html
@@ -135,4 +135,85 @@ data-index="0">
         });
     </script>
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Tab line</p>
+        </div>
+        <div class="g-example-body flex-inline">
+            <div data-role="tabstrip" class="tab-control line">
+                <ul>
+                    <li class="k-state-active">메뉴1</li>
+                    <li>메뉴2</li>
+                    <li>메뉴3</li>
+                    <li>메뉴4</li>
+                    <li>메뉴5</li>
+                </ul>
+                <!-- 첫번째 탭 -->
+                <div>
+                    첫번째 내용
+                </div>
+                <!-- //첫번째 탭 -->
+                <!-- 두번째 탭 -->
+                <div>
+                    두번째 내용
+                </div>
+                <!-- //두번째 탭 -->
+                <!-- 세번째 탭 -->
+                <div>
+                    세번째 내용
+                </div>
+                <!-- //세번째 탭 -->
+                <!-- 네번째 탭 -->
+                <div>
+                    네번째 내용
+                </div>
+                <!-- //네번째 탭 -->
+                <!-- 다섯번째 탭 -->
+                <div>
+                    다섯번째 내용
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div data-role="tabstrip" class="tab-control line">
+    &lt;ul>
+        &lt;li class="k-state-active">메뉴1&lt;/li>
+        &lt;li>메뉴2&lt;/li>
+        &lt;li>메뉴3&lt;/li>
+        &lt;li>메뉴4&lt;/li>
+        &lt;li>메뉴5&lt;/li>
+    &lt;/ul>
+    &lt;!-- 첫번째 탭 -->
+    &lt;div>
+        첫번째 내용
+    &lt;/div>
+    &lt;!-- //첫번째 탭 -->
+    &lt;!-- 두번째 탭 -->
+    &lt;div>
+        두번째 내용
+    &lt;/div>
+    &lt;!-- //두번째 탭 -->
+    &lt;!-- 세번째 탭 -->
+    &lt;div>
+        세번째 내용
+    &lt;/div>
+    &lt;!-- //세번째 탭 -->
+    &lt;!-- 네번째 탭 -->
+    &lt;div>
+        네번째 내용
+    &lt;/div>
+    &lt;!-- //네번째 탭 -->
+    &lt;!-- 다섯번째 탭 -->
+    &lt;div>
+        다섯번째 내용
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+    <script>
+        
+    </script>
+
 </div>
