--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -67,4 +67,78 @@
         </div>
     </div>
 
+
+
+    
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Table</p>
+        </div>
+        <div class="g-example-body">
+            <div class="title-box sm">
+                <h4 class="sub-title">SM 타이틀</h4>
+                <span class="noti red">*정보가 들어갑니다.</span>
+            </div>
+            <div class="table">
+                <table>
+                    <colgroup>
+                        <col width="130px">
+                        <col width="*">
+                        <col width="130px">
+                        <col width="*">
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">필수정보<span class="required">*</span></th>
+                            <td></td>
+                            <th scope="row">일반정보</th>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">필수정보<span class="required">*</span></th>
+                            <td></td>
+                            <th scope="row">필수정보<span class="required">*</span></th>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="title-box sm">
+    &lt;h4 class="sub-title">SM 타이틀&lt;/h4>
+    &lt;span class="noti red">*정보가 들어갑니다.&lt;/span>
+&lt;/div>
+&lt;div class="table">
+    &lt;table>
+        &lt;colgroup>
+            &lt;col width="130px">
+            &lt;col width="*">
+            &lt;col width="130px">
+            &lt;col width="*">
+        &lt;/colgroup>
+        &lt;tbody>
+            &lt;tr>
+                &lt;th scope="row">필수정보&lt;span class="required">*&lt;/span>&lt;/th>
+                &lt;td>&lt;/td>
+                &lt;th scope="row">일반정보&lt;/th>
+                &lt;td>&lt;/td>
+            &lt;/tr>
+            &lt;tr>
+                &lt;th scope="row">필수정보&lt;span class="required">*&lt;/span>&lt;/th>
+                &lt;td>&lt;/td>
+                &lt;th scope="row">필수정보&lt;span class="required">*&lt;/span>&lt;/th>
+                &lt;td>&lt;/td>
+            &lt;/tr>
+        &lt;/tbody>
+    &lt;/table>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+
+
 </div>
