--- a/guide/elements/tabletitle.html
+++ b/guide/elements/tabletitle.html
@@ -7,7 +7,12 @@
             <div class="title-box lg">
                 <div class="left-group">
                     <h2 class="main-title">메인 타이틀</h2>
-                    <button type="button" class="h-ico lg tip ml-8">팁</button>
+                    <span class="h-ico lg tip ml-8"
+                                title="툴팁 메세지 입니다."
+                                data-role="tooltip"
+                                data-auto-hide="false"
+                                data-position="left bottom"
+                            >팁</span>
                     <button type="button" class="h-ico sm bookmark ml-4 funcToggle">북마크</button>
                 </div>
                 <div class="right-group">
@@ -81,7 +86,7 @@
                     </span>
                 </div>
                 <div class="right-group">
-                    <button type="button" class="h-btn">상품등록</button>
+                    <button data-role="button" class=""><span>상품등록</span></button>
                 </div>
             </div>
         </div>
@@ -95,7 +100,7 @@
         &lt;/span>
     &lt;/div>
     &lt;div class="right-group">
-        &lt;button type="button" class="h-btn">상품등록&lt;/button>
+        &lt;button data-role="button" class="">&lt;span>상품등록&lt;/span>&lt;/button>
     &lt;/div>
 &lt;/div>
             </code></pre>
