--- a/guide/elements_bp/form.html
+++ b/guide/elements_bp/form.html
@@ -60,14 +60,14 @@
         <div class="g-example-body flex-block">
             <div class="form-set">
                 <input type="text" class="h-input" placeholder="영,숫자 8~10자 입력" />
-                <button type="button" data-role="button" class="yellow">아이디 확인</button>
+                <button type="button" data-role="button" class="yellow"><span>아이디 확인</span</button>
             </div>
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
 &lt;div class="form-set">
     &lt;input type="text" class="h-input" placeholder="영,숫자 8~10자 입력" />
-    &lt;button type="button" data-role="button" class="yellow">아이디 확인&lt;/button>
+    &lt;button type="button" data-role="button" class="yellow">&lt;span>아이디 확인&lt;/span>&lt;/button>
 &lt;/div>
             </code></pre>
         </div>
