--- a/pages/BC/BCloginA.html
+++ b/pages/BC/BCloginA.html
@@ -40,6 +40,9 @@
      <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
      <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
      <script src="../../resources/js/common.js"></script>
+     <script>
+        kendo.bind($(".wrap"), {});
+    </script>
 </body>
 
 </html>
