--- a/pages/SA/SA070602.html
+++ b/pages/SA/SA070602.html
@@ -107,7 +107,7 @@
                     return stringify(this.get("gridSource").toJSON());
                 },
             });
-            kendo.bind($(".table-content.grid"), viewModel);
+            kendo.bind($(".wrap"), viewModel);
     </script>
 </body>
 
