--- a/guide/list.html
+++ b/guide/list.html
@@ -114,7 +114,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">01거래처정보</td>
                     <td class="d3">02등록(결제사)</td>
@@ -127,7 +127,7 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">02원가정보</td>
                     <td class="d3">02등록(협력사)</td>
@@ -140,11 +140,11 @@
                     <td class="state" data-state=""></td>
                     <td>popup</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">02원가정보</td>
-                    <td class="d3">01조회</td>
-                    <td class="sbid"><span class="pc">SA010201</span><span class="mo"></span></td>
+                    <td class="d3">01조회(01등록)</td>
+                    <td class="sbid"><span class="pc">SA010201_01</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-10</td>
                     <td class="ex_end">08-10</td>
@@ -153,7 +153,33 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">02원가정보</td>
+                    <td class="d3">01조회(02수정)</td>
+                    <td class="sbid"><span class="pc">SA010201_02</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-10</td>
+                    <td class="ex_end">08-10</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="">
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">02원가정보</td>
+                    <td class="d3">01조회(03승인반려)</td>
+                    <td class="sbid"><span class="pc">SA010201_03</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-10</td>
+                    <td class="ex_end">08-10</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
                     <td class="d3">01조회</td>
@@ -169,8 +195,47 @@
                 <tr class="do">
                     <td class="d1">01기준정보</td>
                     <td class="d2">03상품정보</td>
-                    <td class="d3">02등록</td>
-                    <td class="sbid"><span class="pc">SA010302</span><span class="mo"></span></td>
+                    <td class="d3">02등록(01어플리케이션)</td>
+                    <td class="sbid"><span class="pc">SA010302_01</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-10</td>
+                    <td class="ex_end">08-10</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">03상품정보</td>
+                    <td class="d3">02등록(02결제서비스)</td>
+                    <td class="sbid"><span class="pc">SA010302_02</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-10</td>
+                    <td class="ex_end">08-10</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">03상품정보</td>
+                    <td class="d3">02등록(03부가서비스)</td>
+                    <td class="sbid"><span class="pc">SA010302_03</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-10</td>
+                    <td class="ex_end">08-10</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">03상품정보</td>
+                    <td class="d3">02등록(04특화서비스)</td>
+                    <td class="sbid"><span class="pc">SA010302_04</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-10</td>
                     <td class="ex_end">08-10</td>
