--- a/pages/BC/BC010002.html
+++ b/pages/BC/BC010002.html
@@ -44,7 +44,8 @@
     <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
-   
+    <script>
+        kendo.bind($(".wrap"), {});
     </script>
     
 </body>
