--- a/pages/BC/BC010101.html
+++ b/pages/BC/BC010101.html
@@ -14,84 +14,86 @@
 
         <div id="container">
         </div>
-        <div class="layer-wrap">
-            <div data-role="dialog"
-                 data-title="사용자 등록"
-                 data-width="700"
-                 data-modal="false"
-                >
-                <div class="content-group">
-                    <div class="table">
-                        <table>
-                            <colgroup>
-                                <col width="80px">
-                                <col width="*">
-                                <col width="80px">
-                                <col width="*">
-                            </colgroup>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">USER ID<span class="required">*</span></th>
-                                    <td>
-                                        <div class="form-set">
-                                            <input type="text" class="h-input" />
-                                            <button data-role="button" class="gray-border">중복체크</button>
-                                        </div>
-                                    </td>
-                                    <th scope="row">사용자명<span class="required">*</span></th>
-                                    <td>
-                                        <input type="text" class="h-input" value="홍길동"/>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">부서<span class="required">*</span></th>
-                                    <td>
-                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-                                            <option value="1">온라인</option>
-                                            <option value="2">오프라인</option>
-                                        </select>
-                                    </td>
-                                    <th scope="row">권한<span class="required">*</span></th>
-                                    <td>
-                                        <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
-                                            <option value="1">온라인</option>
-                                            <option value="2">오프라인</option>
-                                        </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">핸드폰번호<span class="required">*</span></th>
-                                    <td><input type="text" class="h-input" /></td>
-                                    <th scope="row">사용유무<span class="required">*</span></th>
-                                    <td><input type="text" class="h-input" /></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">비밀번호<span class="required">*</span></th>
-                                    <td><input type="text" class="h-input" /></td>
-                                    <th scope="row">엑셀다운로드</th>
-                                    <td><input type="text" class="h-input" /></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <ul class="pop-guide">
-                        <li class="list">* 사용자정보 수정시 비밀번호가 공란이면 기존 비밀번호를 유지합니다.</li>
-                        <li class="list">* 비밀번호는 8~12자 영문, 숫자, 특수문자를 포함해서 작성해야 합니다.</li>
-                        <li class="list">* 특수문자는 [!@#$^*_-]만 사용가능 합니다.</li>
-                    </ul>
-                    <div class="btn-box justify-content-end mt-10">
-                        <button data-role="button" class="">저장</button>
-                    </div>
+        
+        <div data-role="dialog"
+             data-title="사용자 등록"
+             data-width="700"
+             data-modal="false"
+            >
+            <div class="content-group">
+                <div class="table">
+                    <table>
+                        <colgroup>
+                            <col width="80px">
+                            <col width="*">
+                            <col width="80px">
+                            <col width="*">
+                        </colgroup>
+                        <tbody>
+                            <tr>
+                                <th scope="row">USER ID<span class="required">*</span></th>
+                                <td>
+                                    <div class="form-set">
+                                        <input type="text" class="h-input" />
+                                        <button data-role="button" class="gray-border">중복체크</button>
+                                    </div>
+                                </td>
+                                <th scope="row">사용자명<span class="required">*</span></th>
+                                <td>
+                                    <input type="text" class="h-input" value="홍길동"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">부서<span class="required">*</span></th>
+                                <td>
+                                    <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+                                        <option value="1">온라인</option>
+                                        <option value="2">오프라인</option>
+                                    </select>
+                                </td>
+                                <th scope="row">권한<span class="required">*</span></th>
+                                <td>
+                                    <select data-role="dropdownlist" data-value="선택" data-option-label="선택">
+                                        <option value="1">온라인</option>
+                                        <option value="2">오프라인</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">핸드폰번호<span class="required">*</span></th>
+                                <td><input type="text" class="h-input" /></td>
+                                <th scope="row">사용유무<span class="required">*</span></th>
+                                <td><input type="text" class="h-input" /></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">비밀번호<span class="required">*</span></th>
+                                <td><input type="text" class="h-input" /></td>
+                                <th scope="row">엑셀다운로드</th>
+                                <td><input type="text" class="h-input" /></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <ul class="pop-guide">
+                    <li class="list">* 사용자정보 수정시 비밀번호가 공란이면 기존 비밀번호를 유지합니다.</li>
+                    <li class="list">* 비밀번호는 8~12자 영문, 숫자, 특수문자를 포함해서 작성해야 합니다.</li>
+                    <li class="list">* 특수문자는 [!@#$^*_-]만 사용가능 합니다.</li>
+                </ul>
+                <div class="btn-box justify-content-end mt-10">
+                    <button data-role="button" class="">저장</button>
                 </div>
             </div>
         </div>
- 
     </div>
+
+    <!-- <div class="layer-wrap"></div> -->
     <!-- Default Script Include -->
     <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
-   
+    <script>
+        kendo.bind($(".wrap"), {});
+    </script>
 </body>
 
 </html>
