--- a/pages/BP/BP0110.html
+++ b/pages/BP/BP0110.html
@@ -1148,6 +1148,9 @@
     <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
     <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
     <script src="../../resources/js/common.js"></script>
+    <script>
+        kendo.bind($(".wrap"), {});
+    </script>
 </body>
 
 </html>
