--- a/pages/SA/SA010301.html
+++ b/pages/SA/SA010301.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">상담정보 관리</h2>
+                            <h2 class="main-title">상품정보</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -36,8 +36,8 @@
                                 data-editable=false,
                                 data-navigational=true,
                                 data-items='[
-                            { type:"rootitem", href: "", text: "서비스품질", showText: true },
-                            { type:"item", href: "", text: "상담정보 관리", showText: true}
+                            { type:"rootitem", href: "", text: "기준정보", showText: true },
+                            { type:"item", href: "", text: "상품정보", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -55,35 +55,12 @@
                                         <option value="2">오프라인</option>
                                     </select>
                                     <div class="input-set search lg">
+                                        <i class="h-ico search"></i>
                                         <input type="text" class="h-input" placeholder="입력해주세요">
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <span class="label">상담부서</span>
-                                <div class="form-set">
-                                    <select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
-                                        <option value="1">온라인</option>
-                                        <option value="2">오프라인</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <span class="label">검색기간</span>
-                                <div class="form-set">
-                                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <span class="bar">~</span>
-                                    <input data-role="dateinput" data-format="yyyy/MM/dd" data-value="2021/07/31"/> 
-                                    <ul data-role="buttongroup" class="period"
-                                    data-index="0">
-                                        <li data-role="button">오늘</li>
-                                        <li data-role="button">7일</li>
-                                        <li data-role="button">15일</li>
-                                        <li data-role="button">1개월</li>
-                                        <li data-role="button">3개월</li>
-                                    </ul>
-                                </div>
-                            </div>
+                            
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                         </div>
                         <div class="table-set">
@@ -143,8 +120,8 @@
                     return stringify(this.get("gridSource").toJSON());
                 },
             });
+            kendo.bind($(".table-content.grid"), viewModel);
             kendo.bind($(".wrap"), viewModel);
- 
     </script>
 </body>
 
