--- a/pages/SA/SA070602_01.html
+++ b/pages/SA/SA070602_01.html
@@ -109,7 +109,7 @@
                     return stringify(this.get("gridSource").toJSON());
                 },
             });
-            kendo.bind($(".table-content.grid"), viewModel);
+            kendo.bind($(".wrap"), viewModel);
     </script>
 </body>
 
